etc/firewall.conf
# Generated by iptables-save v1.8.7 on Tue Aug 10 12:17:52 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 128.31.0.62/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 130.89.148.14/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 149.20.4.15/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 5.153.231.4/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 217.196.149.233/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.211.132.250/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -i lo -j ACCEPT
-A INPUT ! -s 141.45.0.0/16 -j DROP
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -s 127.0.0.0/8 -d 127.0.0.0/8 -o lo -j ACCEPT
-A OUTPUT ! -d 141.45.0.0/16 -j DROP
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 123 -j ACCEPT
-A OUTPUT -j DROP
COMMIT
# Completed on Tue Aug 10 12:17:52 2021
